<resources>
    <string name="app_name">MyBulkBilling</string>
    <string name="google_api_keys">AIzaSyDoImTHj-5u7u4AcJUV0aPQZu8jnU_wZWc</string>
    <string name="facebook_app_id">2215902421782708</string>
    <string name="fb_login_protocol_scheme">fb2215902421782708</string>

    <string name="strEmailId">Email ID*</string>
    <string name="strEnterEmailId">Enter your email address</string>
    <string name="strPassword">Password</string>
    <string name="strPassword2">Password*</string>
    <string name="strEnterPassword">Enter Password</string>
    <string name="strForgotPassword">Forgot Password?</string>
    <string name="strLogin">Login</string>
    <string name="strOr">OR</string>
    <string name="strConnectWithFacebook">Connect with Facebook</string>
    <string name="strNoAccount">Don\'t have account</string>
    <string name="strSignup">Sign Up</string>
    <string name="strStep1">Step 1</string>
    <string name="strDoctor">Doctor</string>
    <string name="strPatient">Patient</string>
    <string name="strName">Name*</string>
    <string name="strName2">Name</string>
    <string name="strFirstName">First Name*</string>
    <string name="strLastName">Last Name*</string>
    <string name="strContactNumber">Contact Number*</string>
    <string name="strEnterContactNum">04xxxxxxxx</string>
    <string name="strNotificationVia">Notification Via</string>
    <string name="strEmail">Email</string>
    <string name="strSMS">SMS</string>
    <string name="strNext">Next</string>
    <string name="strAlreadyHaveAccount">Already have an account?</string>
    <string name="strTermsCondition">By creating an account, I accept the Term of use and Privacy Policy</string>
    <string name="strTermsConditionCheck">Please check the Terms &amp; condition </string>
    <string name="strVerifyOtp">Verifying your number !</string>
    <string name="strVerifyNumberText">Please type the verification code .</string>
    <string name="strResend">Resend Otp</string>
    <string name="strVerify">Verify</string>
    <string name="strStep2">Step 2</string>
    <string name="strStep3">Step 3</string>
    <string name="strSetPassword">Set your password !</string>
    <string name="strConfirmPassword">Confirm Password</string>
    <string name="strConfmPassword">Confirm your password</string>
    <string name="strDone">Done</string>
    <string name="strStep4">Step 4</string>
    <string name="strSelectAccountType">Select Account Type</string>
    <string name="strBasicAccount">Basic Account</string>
    <string name="strFree">Free</string>
    <string name="strDemo">Lorem Ipsum is simply dummy text for the printing and type testing Industry</string>
    <string name="str25">$25</string>
    <string name="strPremiumAccount">Premium Account</string>
    <string name="strPayment">Payment</string>
    <string name="strApply">Apply</string>
    <string name="strPromocode">Promocode</string>
    <string name="strExpiryDate">Expiry Date</string>
    <string name="strCVV">CVV</string>
    <string name="strProceedtoPay">Proceed to pay $25</string>
    <string name="strNameOnCard">Name On Card</string>
    <string name="strCardNumber">Card Number</string>
    <string name="strSettings">Settings</string>
    <string name="strpProfileSetting">Profile Setting</string>
    <string name="strNotifyMode">Notification Receive Mode</string>
    <string name="strUpdatePayment">Update Payment Method</string>
    <string name="strUpgadeSubs">Update Subscription Plan</string>
    <string name="strChangePassword">Change Password</string>
    <string name="strSubscriptions">Subscriptions</string>
    <string name="strOldPassword">Old Password</string>
    <string name="strEnterOldPassword">Enter Current Password</string>
    <string name="strNewPassword">New Password</string>
    <string name="strEnterNewPassword">Enter New Password</string>
    <string name="strCreateProfile">Create Profile</string>
    <string name="strEdit">Edit</string>
    <string name="strSpecialArea">Specialization Area</string>
    <string name="strSpecialArea2">Specialization Area*</string>
    <string name="strAddSpecialArea">Add Specialization Area</string>
    <string name="strSpecialField">Specialization Field</string>
    <string name="strSpecialField2">Specialization Field*</string>
    <string name="strAddSpecialField">Add Specialization Field</string>
    <string name="strSpeciality">Speciality</string>
    <string name="strSpeciality2">Speciality*</string>
    <string name="strAddSpeciality">Add Speciality</string>
    <string name="strClinicName">Clinic Name</string>
    <string name="strClinicName2">Clinic Name*</string>
    <string name="strEnterClinicName">Enter Clinic Name</string>
    <string name="strExperience">Experience (Years)</string>
    <string name="strExperience2">Experience* (Years)</string>
    <string name="str0_03">0 - 03 years</string>
    <string name="str03_05">03 - 05 years</string>
    <string name="str05_10">05 - 10 years</string>
    <string name="str10_15">10 - 15 years</string>
    <string name="strAbove15">Above 15 years</string>
    <string name="strQualification">Qualifications</string>
    <string name="strQualification2">Qualifications*</string>
    <string name="strEnterQualifications">Enter Qualifications</string>
    <string name="strSelectDays">Select Days</string>
    <string name="strSelectDays2">Select Days*</string>
    <string name="strEnterSelectDays">Add available week days</string>
    <string name="strOpenTime">Open Time</string>
    <string name="strOpenTime2">Open Time*</string>
    <string name="strSelect">Select</string>
    <string name="strCloseTime">Close Time</string>
    <string name="strCloseTime2">Close Time*</string>
    <string name="strSave">Save</string>
    <string name="strAddress">Address</string>
    <string name="strAddress2">Address*</string>
    <string name="strEnterClinicAddress">Add Clinic Address</string>
    <string name="strMyProfile">My Profile</string>
    <string name="strAvailible">Availability</string>
    <string name="strChange">Change</string>
    <string name="strTiming">Timing</string>
    <string name="strViewDetail">View\nDetail</string>
    <string name="strAccept">Accept</string>
    <string name="strSuggest">Suggest</string>
    <string name="strReject">Reject</string>
    <string name="strMyRating">My Ratings</string>
    <string name="str5">5</string>
    <string name="str4">4</string>
    <string name="str3">3</string>
    <string name="str2">2</string>
    <string name="str1">1</string>
    <string name="strReview">Review Highlights</string>
    <string name="strLogout">Logout</string>
    <string name="strHome">Home</string>
    <string name="strloremIpsum">Lorem Ipsum is the universal text for Quality purpose</string>
    <string name="strSubmitRating">Submit Rating</string>
    <string name="strRateUs">Rate Us</string>
    <string name="strAddRating">Add Rating</string>
    <string name="strConsultationFee">Consultaion Fee: $10</string>
    <string name="strSpecialization">Specialization</string>
    <string name="strReccomendation">Recomendations</string>
    <string name="strGetAppointment">Get An Appointment</string>
    <string name="strReccomend">Recommend to a friend</string>
    <string name="strProfileInfo">Profile Info</string>
    <string name="strAppointmentStatus">Appointment Status :</string>
    <string name="strSuggestedTime">Suggested new date and time</string>
    <string name="strOk">OK</string>
    <string name="strHistory">History</string>
    <string name="strNotifications">Notifications</string>
    <string name="strNotificationRecMode">Notification Receive Modes :-</string>
    <string name="error_no_internet">Please connect to internet</string>
    <string name="error_login">Could not perform login . Please try later .</string>
    <string name="error_signUp">Couldn\'t not connect to internet. Please try  later.</string>
    <string name="loading_add_task">Loading...</string>
    <string name="strEnterContact">Enter your contact number</string>
    <string name="strForgotPass">Forgot Password</string>
    <string name="strOtp">OTP</string>
    <string name="strEnterOTP">Enter otp</string>
    <string name="strPhoneNumber">Phone Number</string>
    <string name="strEnterPhone">Enter Phone Number</string>
    <string name="strLoginAs">Login as</string>
    <string name="select_level1">Please select Specialization Area.</string>
    <string name="select_level2">Please select Specialization Field.</string>
    <string name="invalid_otp">Invalid OTP</string>
    <string name="strCurrentPassword">Current Password</string>
    <string name="fb_error">Error occured while logging in with Facebook</string>
    <string name="fb_cancel">Facebook login request canceled.</string>
    <string name="strWelcome">Welcome,</string>
    <string name="strBetterHealth">Wish you a better health</string>
    <string name="strContinue">Continue</string>
    <string name="strSearchForDoctor">Search for the doctor</string>
    <string name="strMyAppointment">My Appointments</string>
    <string name="strMyFavourites">My Favourites</string>
    <string name="strFilter">Filter</string>
    <string name="strRating">Rating</string>
    <string name="strClearAll">Clear All</string>
    <string name="strGetappointment">Get Appointment</string>
    <string name="strHealth">Health Issue :</string>
    <string name="strDescribe">Describe your health issue here..</string>
    <string name="strSubmitRequest">Submit Request</string>
    <string name="strFor">For</string>
    <string name="strDateDay">Date and Day</string>
    <string name="strClose">Close</string>
    <string name="strCancel">Cancel</string>
    <string name="strConfirmed">Confirmed</string>
    <string name="strConfirm">Confirm</string>
    <string name="strStatus">Status :</string>
    <string name="strSuggested">Suggested</string>
    <string name="strPending">Pending</string>
    <string name="strRejected">Rejected</string>
    <string name="strContinueAs">Continue As :-</string>
    <string name="strEditProfile">Edit Profile</string>
    <string name="strEnterFirstName">Enter First Name</string>
    <string name="strEnterLastName">Enter Last Name</string>
    <string name="strCanceled">Canceled</string>
</resources>
