<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorThemeGreen"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_8sdp"
            android:background="@android:color/transparent"
            android:padding="@dimen/_8sdp"
            android:id="@+id/btnBack"
            android:src="@drawable/back_white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/strChangePassword"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_16sdp" />
    </RelativeLayout>


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:fontFamily="@font/raleway_medium"
        android:id="@+id/tvOldPassword"
        android:textSize="@dimen/_14sdp"
        android:text="@string/strCurrentPassword"
        android:textColor="@color/colorTextGreen"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvOldPassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_6sdp"
        android:paddingRight="@dimen/_6sdp"
        android:textSize="@dimen/_14sdp"
        android:inputType="textPassword"
        android:id="@+id/edOldPassword"
        android:hint="@string/strEnterOldPassword"
        android:fontFamily="@font/raleway_medium"
        android:background="@drawable/bg_curved_grey_outline"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edOldPassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:id="@+id/tvNewPassword"
        android:textSize="@dimen/_14sdp"
        android:text="@string/strNewPassword"
        android:textColor="@color/colorTextGreen"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvNewPassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_6sdp"
        android:paddingRight="@dimen/_6sdp"
        android:inputType="textPassword"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/edNewPassword"
        android:hint="@string/strEnterNewPassword"
        android:background="@drawable/bg_curved_grey_outline"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edNewPassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_16sdp"
        android:fontFamily="@font/raleway_medium"
        android:id="@+id/tvConfirmPassword"
        android:textSize="@dimen/_14sdp"
        android:text="@string/strConfirmPassword"
        android:textColor="@color/colorTextGreen"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/tvConfirmPassword"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:paddingLeft="@dimen/_6sdp"
        android:paddingRight="@dimen/_10sdp"
        android:inputType="textPassword"
        android:textSize="@dimen/_14sdp"
        android:id="@+id/edConfirmPassword"
        android:hint="@string/strConfmPassword"
        android:fontFamily="@font/raleway_medium"
        android:background="@drawable/bg_curved_grey_outline"
        />


    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/edConfirmPassword"
        android:layout_marginTop="@dimen/_24sdp"
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:background="@drawable/bg_button_yellow"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/strDone"
        android:textSize="@dimen/_16sdp"
        android:textColor="@color/colorTextGreen"
        android:id="@+id/btnDone"
        />

</androidx.constraintlayout.widget.ConstraintLayout>