<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/_16sdp">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/btnBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                android:background="@android:color/transparent"
                android:padding="@dimen/_8sdp"
                android:src="@drawable/back_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/strForgotPass"
                android:textColor="@color/colorTextGreen"
                android:textSize="@dimen/_15sdp" />
        </RelativeLayout>


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_8sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_8sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/relativeLayout"
            app:srcCompat="@drawable/logo_login" />


        <LinearLayout
            android:id="@+id/linear1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:gravity="bottom"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView2">

            <TextView
                android:id="@+id/tvOTP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/strOtp"
                android:textColor="@color/colorTextGreen"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edOTP"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/bg_curved_grey_outline"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/strEnterOTP"
                android:maxLength="6"
                android:inputType="number"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tvPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/strNewPassword"
                android:textColor="@color/colorTextGreen"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/bg_curved_grey_outline"
                android:fontFamily="@font/raleway_medium"
                android:maxLength="20"
                android:hint="@string/strEnterPassword"
                android:inputType="textPassword"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />

            <TextView
                android:id="@+id/tvConfirmPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:fontFamily="@font/raleway_medium"
                android:text="@string/strConfirmPassword"
                android:textColor="@color/colorTextGreen"
                android:textSize="@dimen/_14sdp" />

            <EditText
                android:id="@+id/edConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_8sdp"
                android:layout_marginRight="@dimen/_20sdp"
                android:background="@drawable/bg_curved_grey_outline"
                android:fontFamily="@font/raleway_medium"
                android:hint="@string/strConfmPassword"
                android:inputType="textPassword"
                android:maxLength="20"
                android:padding="@dimen/_8sdp"
                android:textSize="@dimen/_14sdp" />

        </LinearLayout>


        <Button
            android:id="@+id/btnDone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginLeft="@dimen/_20sdp"
            android:layout_marginRight="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_12sdp"
            android:background="@drawable/bg_button_yellow"
            android:fontFamily="@font/raleway_bold"
            android:text="@string/strDone"
            android:textColor="@color/colorTextGreen"
            android:textSize="@dimen/_16sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linear1"
            tools:layout_editor_absoluteX="16dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>