<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/_16sdp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_54sdp"
        android:layout_marginBottom="8dp"
        android:src="@drawable/logo_login"
        app:layout_constraintBottom_toTopOf="@+id/tvWelcome"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tvWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_24sdp"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/strWelcome"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/_24sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:fontFamily="@font/raleway_medium"
        android:text="@string/strBetterHealth"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/_18sdp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

    <Button
        android:id="@+id/btnContinue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_16sdp"
        android:layout_marginTop="@dimen/_48sdp"
        android:layout_marginRight="@dimen/_16sdp"
        android:background="@drawable/bg_button_yellow"
        android:fontFamily="@font/raleway_bold"
        android:text="@string/strContinue"
        android:textColor="@color/colorTextGreen"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

</androidx.constraintlayout.widget.ConstraintLayout>
